objects/vlocity_cmt__AccountBalance__c.object
<CustomObject>
    <description>Represents a historical snapshot of charges, credits and resulting balance for an account at a point in time. Populates from a client&apos;s billing system.</description>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Balances</relationshipLabel>
        <relationshipName>AccountRegisters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Charges__c</fullName>
        <label>Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Credit__c</fullName>
        <label>Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <label>Account Balance</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AB-{0000}</displayFormat>
        <label>Account Balance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Balances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>